Add method get_absolute_url in city_detail's template

--- a/travelers_project/geography/templates/geography/region_detail.html
+++ b/travelers_project/geography/templates/geography/region_detail.html
@@ -11,7 +11,7 @@
       <h2>{{ region.title }}</h2>
       {% with cities=region.city.all %}
           {% for city in cities %}
-            <a href="#">
+            <a href="{{ city.get_absolute_url }}">
               <h3>{{ city.title }}</h3>
             </a>
           {% endfor %}
