--- a/travelers_project/travelers/templates/travelers/index.html
+++ b/travelers_project/travelers/templates/travelers/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% if traveler_list %}
+    <ul>
+    {% for traveler in traveler_list %}
+        <li><a href= "{{ traveler.id }}">{{ traveler.name }}</a></li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <p>No travelers are available in db.</p>
+{% endif %}
