--- a/travelers_project/travelers/templates/travelers/index.html
+++ b/travelers_project/travelers/templates/travelers/index.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+
+{% block content %}
+
 {% if traveler_list %}
     <ul>
     {% for traveler in traveler_list %}
@@ -7,3 +12,5 @@
 {% else %}
     <p>No travelers are available in db.</p>
 {% endif %}
+
+{% endblock %}
