updated city -> city_detail in template for city

--- a/travelers_project/geography/templates/geography/city_detail.html
+++ b/travelers_project/geography/templates/geography/city_detail.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   {% block content %}
-      <h1>{{ city.title }}</h1>
-      <p>{{ city.description }}</p>
+      <h1>{{ city_detail.title }}</h1>
+      <p>{{ city_detail.description }}</p>
   {% endblock %}
 
 </body>
