Updated region -> region_detail

--- a/travelers_project/geography/templates/geography/region_detail.html
+++ b/travelers_project/geography/templates/geography/region_detail.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   {% block content %}
-      <h2>{{ region.title }}</h2>
-      {% with cities=region.city.all %}
+      <h2>{{ region_detail.title }}</h2>
+      {% with cities=region_detail.city.all %}
           {% for city in cities %}
             <a href="{{ city.get_absolute_url }}">
               <h3>{{ city.title }}</h3>
