--- a/travelers_project/geography/templates/geography/type_sight_detail.html
+++ b/travelers_project/geography/templates/geography/type_sight_detail.html
@@ -9,7 +9,7 @@
 <body>
   {% block content %}
     <h1>{{ type_sight.title }}</h1>
-    {% with sights=type_sight.type_sight.all %}
+    {% with sights=type_sight_detail.type_sight.all %}
         {% for sight in sights %}
           <h3>{{ sight.title }} <a href="{{ sight.city.get_absolute_url }}">({{ sight.city }})</a></h3>
           <p>{{ sight.text }}</p>
