--- a/travelers_project/geography/templates/geography/city_detail.html
+++ b/travelers_project/geography/templates/geography/city_detail.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  {% block content %}
-      <h1>{{ city_detail.title }}</h1>
-      <p>{{ city_detail.description }}</p>
-  {% endblock %}
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <h1>{{ city_detail.title }}</h1>
+    <p>{{ city_detail.description }}</p>
+{% endblock %}
