--- a/travelers_project/travelers/templates/base.html
+++ b/travelers_project/travelers/templates/base.html
@@ -27,8 +27,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
 				<script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){
@@ -44,10 +44,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="header">
 		<div class="container">
 			<div class="logo">
-				<a href="index.html"><img src="images/log.png" alt=""></a>
+				<a href="index.html"><img src="{% static 'images/log.png' %}" alt=""></a>
 			</div>
 				<div class="top-nav">
-					<span class="menu"><img src="images/menu.png" alt="" > </span>
+					<span class="menu"><img src="{% static 'images/menu.png' %}" alt="" > </span>
 					<ul>
 						<li  ><a href="services.html" >Services</a></li>
 						<li><a href="story.html" > Our Story</a></li>
