--- a/travelers_project/traces/templates/traces/route_cities_detail.html
+++ b/travelers_project/traces/templates/traces/route_cities_detail.html
@@ -1,10 +1,16 @@
-{% extands 'base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <h1>{{ route_city_detail.title }}</h1>
-    {% with cities=route_city_detail.cities.all %}
-        {% for city in cities %}
-            <p>{{ city.title }}</p>
-        {% endfor %}
-    {% endwith %}
+    {% if route_city_detail %}
+        <h1>{{ route_city_detail.title }}</h1>
+        {% with cities=route_city_detail.cities.all %}
+            {% for city in cities %}
+                <p>{{ city.title }}</p>
+            {% endfor %}
+        {% endwith %}
+    {% else %}
+
+        <p>None</p>
+
+    {% endif%}
 {% endblock %}
