--- a/travelers_project/geography/templates/geography/city_detail.html
+++ b/travelers_project/geography/templates/geography/city_detail.html
@@ -6,7 +6,11 @@
       <h1>{{ city_detail.title }}</h1>
       <div class="single-middle">
         <div class="col-md-7 need">
-          <img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt="">
+          {% if city_detail.image %}
+            <img class="img-responsive" src="{{ city_detail.image.url }}" alt="">
+          {% else %}
+            <img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt="">
+          {% endif %}
         </div>
         <div class="col-md-5 tag">
           <div class="social-in">
