--- a/travelers_project/geography/templates/geography/regions.html
+++ b/travelers_project/geography/templates/geography/regions.html
@@ -19,11 +19,9 @@
               <div class="col-md-6 top-grid-right">
                 <h4>{{ region.title }}</h4>
                 <p>
-                  {{ region.description }}
+                  {{ region.description|truncatewords:20 }}
 
                   There are many variations of passages of Lorem Ipsum available,
-                  but the majority have suffered alteration in some form, by injected humour,
-                  or randomised words which don't look even slightly believable.
                 </p>
               </div>
             </a>
