--- a/travelers_project/travelers/templates/base.html
+++ b/travelers_project/travelers/templates/base.html
@@ -91,7 +91,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										{% else %}
 											<img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt="">
 										{% endif %}
-										<p>Brand Project<i> </i></p>
+										<p>{{ sight.title }}<i> </i></p>
 									</a>
 								</div>
 							</div>
