--- a/travelers_project/travelers/static/css/style.css
+++ b/travelers_project/travelers/static/css/style.css
@@ -1,4 +1,4 @@
-/*--A Design by W3layouts 
+/*--A Design by W3layouts
 Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 body{
 	background:#fff;
-	font-family: 'Open Sans', sans-serif;	
+	font-family: 'Open Sans', sans-serif;
 }
 body a{
 	transition: 0.5s all;
@@ -21,7 +21,7 @@ ul{
 }
 
 h1,h2,h3,h4,h5,h6,label,p{
-	margin:0;	
+	margin:0;
 }
 .header {
 	padding: 1.5em 0;
@@ -199,7 +199,7 @@ a.here i{
 	margin: 0 auto;
 }
 /*----*/
-.content-middle{	
+.content-middle{
 	border-bottom:1px solid #E2E2E2;
 	padding: 3em 0;
 }
@@ -284,7 +284,7 @@ a.here i{
 	position: absolute;
 	bottom: 0;
 	background: #4d4d4d;
-	 width: 89.5%; 
+	 width: 89.5%;
 	display: block;
 	padding: 1em;
 	display:none;
@@ -426,6 +426,7 @@ ul.social li a i.gmail:hover{
 }
 .story-popular {
 	text-align: center;
+	margin-bottom: 25px;
 }
 .story-our h3{
 	font-size:3em;
@@ -721,7 +722,7 @@ a.web-in{
 	color:#4d4d4d;
 	padding:0.7em 0;
 }
-a.back {	
+a.back {
 	color: #4f4f4f;
 	font-size: 1.2em;
 	font-weight: 700;
@@ -755,11 +756,11 @@ a.back:hover {
 	border: 1px solid #E0E0E0;
 	outline:none;
 	color:#464646;
-	font-size:0.8125em;	
+	font-size:0.8125em;
 }
 .contact-left textarea{
 	resize:none;
-	height:100px;		
+	height:100px;
 }
 .contact-left input[type="submit"] {
 	background: none;
@@ -982,7 +983,7 @@ p.tag-in {
 .submit form {
 	margin: 3em 0 0 5em;
 }
-.content-middle {	
+.content-middle {
 	padding: 1em 0;
 }
 .fashion {
