--- a/travelers_project/geography/templates/geography/regions.html
+++ b/travelers_project/geography/templates/geography/regions.html
@@ -1,40 +1,43 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load thumbnail%}
 
 {% block content %}
-  <div class="container">
+<div class="container">
     <div class="services">
-      <h3 >REGIONS</h3>
-      <div class="grid-top-top">
-        {% for region in region_list %}
-          <div class="col-md-6 ">
-            <a href="{% url 'region_detail_url' pk=region.pk%}">
-              <div class="col-md-6 service-grid">
-                  {% if region.image %}
-                    <img class="img-responsive" src="{{ region.image.url }}" alt=""/>
-                  {% else %}
-                    <img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt=""/>
-                  {% endif %}
-              </div>
-              <div class="col-md-6 top-grid-right">
-                <h4>{{ region.title }}</h4>
-                <p>
-                  {{ region.description|truncatewords:20 }}
+        <h3>REGIONS</h3>
+        <div class="grid-top-top">
+            {% for region in region_list %}
+            <div class="col-md-6 ">
+                <a href="{% url 'region_detail_url' pk=region.pk%}">
+                    <div class="col-md-6 service-grid">
+                        {% thumbnail region.image "x100" as im %}
+                        <img class="img-responsive" src="{{ im.url }}"  alt=""/>
+                        {% empty %}
+                        <img class="img-responsive" src="{{ default_image.url }}" alt=""/>
+                        {% endthumbnail %}
+                    </div>
+                    <div class="col-md-6 top-grid-right">
+                        <h4>{{ region.title }}</h4>
+                        <p>
+                            {% if region.description %}
+                            {{ region.description|truncatewords:20 }}
+                            {% else %}
+                            {{ mock_text|truncatewords:14}}
+                            {% endif %}
+                        </p>
+                    </div>
+                </a>
+                <div class="clearfix"></div>
+            </div>
+            {% endfor %}
 
-                  There are many variations of passages of Lorem Ipsum available,
-                </p>
-              </div>
-            </a>
-            <div class="clearfix"> </div>
-          </div>
-        {% endfor %}
 
-
-        <div class="clearfix"> </div>
-      </div>
+            <div class="clearfix"></div>
+        </div>
     </div>
 
     {% include 'geography/includes/paginator.html' %}
 
-  </div>
+</div>
 {% endblock %}
