--- a/travelers_project/geography/templates/geography/sight_list.html
+++ b/travelers_project/geography/templates/geography/sight_list.html
@@ -1,29 +1,48 @@
-{% extands 'base.html' %}
+{% extends 'base.html' %}
+{% load static %}
+{% load thumbnail %}
 
 {% block content %}
-  <div class="single-middle">
-    <div class="col-md-7 need">
-      <img class="img-responsive" src="images/si1.jpg" alt="">
+<div class="container">
+    <div class="story">
+        <center>
+            <h1>SIGHTS</h1>
+            <br>
+        </center>
+        {% for sight in sight_list %}
+
+        <div class="col-md-3 story-popular">
+            <div class="feature text-center">
+                {% thumbnail sight.image "x150" crop="center" as im %}
+                <a href="{{ sight.image.url }}">
+                    <img class="img-responsive"
+                         src="{{ im.url }}"
+                         alt="">
+                </a>
+                {% empty %}
+                <img class="img-responsive"
+                     src="{{ default_image.url }}"
+                     alt="">
+                {% endthumbnail %}
+            </div>
+            <div class="feature text-left">
+                <a href="{% url 'sight_detail_url' pk=sight.pk %}">
+                    <h6>{{ sight.title }}</h6>
+                </a>
+                <p>
+                    {% if sight.description %}
+                    {{ sight.description|truncatewords:14 }}
+                    {% else %}
+                    {{ mock_text|truncatewords:14 }}
+                    {% endif %}
+                </p>
+            </div>
+        </div>
+        {% endfor %}
+        <div class="clearfix"></div>
     </div>
-    <div class="col-md-5 tag">
-      <div class="social-in">
-        <div class="col-md-4 date">
-          <p>Date <span>April 15,2014</span></p>
-        </div>
-        <div class="col-md-4 date">
-          <p>Tags<span><a href="#">Website </a> | <a href="#"> Design	</a></span></p>
-        </div>
-        <div class="col-md-4 date">
-          <p>Author<span>Michael Reimer	</span></p>
-        </div>
-        <div class="clearfix"> </div>
-      </div>
-    <p class="tag-in">Lorem ipsum dolor sit amet, mollis epicuri pri ei, perpetua honestatis ad vix. Ne duo ludus putent, cu causae tamquam voluptua duo. Agam officiis no duo, ut reque decore sea. Cu eripuit accusam vix. Facete blandit detraxit pri cu, sea soluta doming civibus ea.
-      <span>Eum eu tale clita iuvaret, cu est saperet forensibus interesset, cum ne case iusto oportere. Id idque indoctum eum, menandri mediocrem has ei. At usu modo quaerendum. Sit ei dicunt tacimates, mea ea enim eirmod suscipiantur, amet dicit ancillae vel in. Ex mea augue eloquentiam, his postea dolorem suavitate ea. Mel hendrerit accommodare concludaturque ex.</span></p>
-    </div>
-    <div class="clearfix"> </div>
-  </div>
-    {% for sight in sight_list %}
-        <h3>{{ sight.title }}</h3>
-    {% endfor %}
-{% endblock %}
+
+    {% include 'geography/includes/paginator.html' %}
+
+</div>
+{% endblock content %}
