--- a/travelers_project/travelers/templates/base.html
+++ b/travelers_project/travelers/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load thumbnail %}
 
 <!--A Design by W3layouts
 Author: W3layout
@@ -9,7 +10,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Trudge a Travel Category Flat Bootstarp Responsive Website Template | Home :: w3layouts</title>
+    <title>Trudge a Travel Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
@@ -23,6 +24,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
     <script type="application/x-javascript">
          addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
+
+
+
+
+
     </script>
     <!--fonts-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -37,6 +43,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 						});
 					});
+
+
+
+
+
 
     </script>
 
@@ -53,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul>
                 <li class="nav-item active"><a href="{% url 'region_list_url' %}">Regions</a></li>
                 <li class="nav-item"><a href="{% url 'city_list_url' %}">Cities</a></li>
-				<li class="nav-item"><a href="{% url 'sight_list_url' %}">Sights</a></li>
+                <li class="nav-item"><a href="{% url 'sight_list_url' %}">Sights</a></li>
                 <li class="nav-item"><a href="#">Traces</a></li>
                 <li class="nav-item"><a href="contact.html">Contacts</a></li>
             </ul>
@@ -63,6 +74,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						$(".top-nav ul").slideToggle(500, function(){
 						});
 					});
+
+
+
+
+
 
             </script>
         </div>
@@ -88,14 +104,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="brand">
             <div class="col-md-3 fashion">
                 <a href="{% url 'sight_detail_url' pk=sight.pk %}">
-                    {% if sight.sight_photo.all %}
-                    {% with photo=sight.sight_photo.first %}
-                    <img class="img-responsive" src="{{ photo.file.url }}" alt="">
-                    {% endwith %}
-                    {% else %}
-                    <img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt="">
-                    {% endif %}
-                    <p>{{ sight.title }}<i> </i></p>
+                    {% thumbnail sight.image "x150" crop="center" as im %}
+                    <img class="img-responsive" src="{{ im.url }}" alt="">
+                    {% empty %}
+                    <img class="img-responsive" src="{{ default_image.url }}" alt="">
+                    {% endthumbnail %}
+                    <p> {{ sight.title }} </p>
                 </a>
             </div>
         </div>
@@ -171,6 +185,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							$().UItoTop({ easingType: 'easeOutQuart' });
 
 						});
+
+
+
+
+
 
     </script>
     <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
